--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 @media only screen and (max-width: 768px) {
     body {
         font-size: 14px;
-        width: 100%;
-        height: 100%; 
-        margin: 0;
-        padding: 0; 
+        text-align: center; 
+    }
+    img {
+        display: block; 
+        margin: 0 auto;
     }
 }
 
