--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,7 @@
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     body {
         font-size: 14px;
         text-align: center; 
-    }
-    img {
-        display: block; 
-        margin: 0 auto;
     }
 }
 
