--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     position: absolute;
     z-index: 1;
     width: 1367px;
+    max-width: 100%;
     height: 120px;
     left: 50px;
     top: 0;
