--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     z-index: 1;
     width: 1367px;
     max-width: 100%;
-    height: 120px;
+    height: auto;
     left: 50px;
     top: 0;
     
