--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 768px) {
     body {
         font-size: 14px;
-        text-align: center; 
+        text-align: auto; 
     }
 }
 .navbar {
